# pb-renderer

./: CMakeLists.txt  README.md  main.cpp
inc/item/: rectangle.h  tessellable.h
inc/utils/: color.h  point2d.h
inc/window/: event.h  render_window.h
src/item/: rectangle.cpp
src/utils/: point2d.cpp
src/window/: render_window.cpp
